add animation to welcome screen

--- a/FlashChat/View/Base.lproj/Main.storyboard
+++ b/FlashChat/View/Base.lproj/Main.storyboard
@@ -54,6 +54,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="Sth-it-z9M"/>
+                    <connections>
+                        <outlet property="titleLabel" destination="jW3-i8-2ZB" id="eOW-TQ-fkK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
