--- a/CloudChat/View/Base.lproj/Main.storyboard
+++ b/CloudChat/View/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="FlashChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="CloudChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -65,7 +65,7 @@
         <!--Log InVC-->
         <scene sceneID="11r-XN-RXK">
             <objects>
-                <viewController id="ner-qh-s6W" customClass="LogInVC" customModule="FlashChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ner-qh-s6W" customClass="LogInVC" customModule="CloudChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hDn-sU-4oZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -153,7 +153,7 @@
         <!--RegistrationVC-->
         <scene sceneID="4Z9-D7-YkE">
             <objects>
-                <viewController id="i3e-YQ-U6R" customClass="RegistrationVC" customModule="FlashChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="i3e-YQ-U6R" customClass="RegistrationVC" customModule="CloudChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="p9d-Vf-9nf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -240,7 +240,7 @@
         <!--ChatVC-->
         <scene sceneID="jFf-1t-d2Q">
             <objects>
-                <viewController id="cZK-iH-XqD" customClass="ChatVC" customModule="FlashChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cZK-iH-XqD" customClass="ChatVC" customModule="CloudChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hAv-Kj-nvd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -325,7 +325,7 @@
         <segue reference="1nk-mL-GR0"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="paperplane.fill" catalog="system" width="128" height="121"/>
+        <image name="paperplane.fill" catalog="system" width="32" height="32"/>
         <image name="textfield" width="298" height="93"/>
         <namedColor name="BrandPalette">
             <color red="0.97600001096725464" green="0.95300000905990601" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
