--- a/CloudChat/View/Base.lproj/Main.storyboard
+++ b/CloudChat/View/Base.lproj/Main.storyboard
@@ -22,7 +22,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxt-IM-tOh">
                                         <rect key="frame" x="0.0" y="0.0" width="152" height="48"/>
                                         <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="30"/>
-                                        <state key="normal" title="Registration"/>
+                                        <state key="normal" title="Registration">
+                                            <color key="titleColor" red="0.0" green="0.47003298999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                         <connections>
                                             <segue destination="i3e-YQ-U6R" kind="show" id="vOO-v6-fYn"/>
                                         </connections>
@@ -255,7 +257,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jSK-Zg-nra">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jSK-Zg-nra">
                                 <rect key="frame" x="0.0" y="88" width="414" height="720"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
@@ -349,7 +351,7 @@
         <image name="paperplane.fill" catalog="system" width="32" height="32"/>
         <image name="textfield" width="298" height="93"/>
         <namedColor name="BrandPalette">
-            <color red="0.97600001096725464" green="0.95300000905990601" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.97647058823529409" green="0.95294117647058818" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BrandPink">
             <color red="0.97600001096725464" green="0.79799997806549072" blue="0.94499999284744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
