--- a/CloudChat/View/Base.lproj/Main.storyboard
+++ b/CloudChat/View/Base.lproj/Main.storyboard
@@ -265,15 +265,15 @@
                                 <rect key="frame" x="0.0" y="808" width="414" height="54"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ebo-ry-kjz">
-                                        <rect key="frame" x="20" y="10" width="384" height="34"/>
+                                        <rect key="frame" x="20" y="10" width="374" height="34"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Message" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fdY-5j-jOR">
-                                                <rect key="frame" x="0.0" y="0.0" width="354" height="34"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="344" height="34"/>
                                                 <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="15"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="47o-1w-iw9">
-                                                <rect key="frame" x="364" y="0.0" width="20" height="34"/>
+                                                <rect key="frame" x="354" y="0.0" width="20" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="20" id="UR5-XJ-r8A"/>
                                                     <constraint firstAttribute="height" constant="34" id="Vd0-VS-3ZD"/>
@@ -291,7 +291,7 @@
                                     <constraint firstItem="ebo-ry-kjz" firstAttribute="top" secondItem="h5U-Du-lCB" secondAttribute="top" constant="10" id="Pde-jp-U6Z"/>
                                     <constraint firstAttribute="bottom" secondItem="ebo-ry-kjz" secondAttribute="bottom" constant="10" id="Z6n-vQ-Fd1"/>
                                     <constraint firstItem="ebo-ry-kjz" firstAttribute="leading" secondItem="h5U-Du-lCB" secondAttribute="leading" constant="20" id="Zzh-zl-kTG"/>
-                                    <constraint firstAttribute="trailing" secondItem="ebo-ry-kjz" secondAttribute="trailing" constant="10" id="umI-gB-rod"/>
+                                    <constraint firstAttribute="trailing" secondItem="ebo-ry-kjz" secondAttribute="trailing" constant="20" id="umI-gB-rod"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -316,6 +316,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="messageTextFiled" destination="fdY-5j-jOR" id="snE-Ww-vRJ"/>
+                        <outlet property="sendMessageButton" destination="47o-1w-iw9" id="unz-I4-phR"/>
                         <outlet property="tableView" destination="jSK-Zg-nra" id="dAS-Zq-6vy"/>
                     </connections>
                 </viewController>
@@ -333,6 +334,10 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" name="BrandPalette"/>
                         <color key="barTintColor" name="BrandPurple"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="25"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -351,7 +356,7 @@
         <image name="paperplane.fill" catalog="system" width="32" height="32"/>
         <image name="textfield" width="298" height="93"/>
         <namedColor name="BrandPalette">
-            <color red="0.97647058823529409" green="0.95294117647058818" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.97600001096725464" green="0.95300000905990601" blue="0.93300002813339233" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BrandPink">
             <color red="0.97600001096725464" green="0.79799997806549072" blue="0.94499999284744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
