--- a/CloudChat/View/MessageCell.xib
+++ b/CloudChat/View/MessageCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="72" id="KGk-i7-Jjw" customClass="MessageCell" customModule="CloudChat" customModuleProvider="target">
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReusableCell" rowHeight="72" id="KGk-i7-Jjw" customClass="MessageCell" customModule="CloudChat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="382" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,13 +20,20 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gya-gs-J9E">
                         <rect key="frame" x="10" y="10" width="362" height="52"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="iQ6-lS-6Ti" userLabel="youAvatarImage">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="fqt-cE-QbK"/>
+                                    <constraint firstAttribute="height" constant="40" id="gcR-yd-8od"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cWr-4Y-wji" userLabel="messageView">
-                                <rect key="frame" x="0.0" y="0.0" width="312" height="50"/>
+                                <rect key="frame" x="50" y="0.0" width="262" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rk8-IP-jbb" userLabel="messageText">
-                                        <rect key="frame" x="10" y="10" width="292" height="30"/>
+                                        <rect key="frame" x="10" y="10" width="242" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -38,11 +45,11 @@
                                     <constraint firstItem="Rk8-IP-jbb" firstAttribute="top" secondItem="cWr-4Y-wji" secondAttribute="top" constant="10" id="wyR-Ms-oID"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="z6m-tn-0NP" userLabel="avatarImage">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="HLw-99-7tB" userLabel="meAvatarImage">
                                 <rect key="frame" x="322" y="0.0" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="8fs-Zg-NT6"/>
-                                    <constraint firstAttribute="width" constant="40" id="cDh-Bt-IEI"/>
+                                    <constraint firstAttribute="width" constant="40" id="aHs-55-pcO"/>
+                                    <constraint firstAttribute="height" constant="40" id="lZT-Wv-Jdn"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -57,15 +64,17 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="avatarImage" destination="z6m-tn-0NP" id="1CY-L3-87U"/>
+                <outlet property="meAvatarImage" destination="HLw-99-7tB" id="Q5c-Pw-zdP"/>
                 <outlet property="messageText" destination="Rk8-IP-jbb" id="m78-Ix-n7M"/>
                 <outlet property="messageView" destination="cWr-4Y-wji" id="iKZ-hj-Wgu"/>
+                <outlet property="youAvatarImage" destination="iQ6-lS-6Ti" id="hK4-xg-FDi"/>
             </connections>
             <point key="canvasLocation" x="176.81159420289856" y="119.86607142857142"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandPink">
             <color red="0.97600001096725464" green="0.79799997806549072" blue="0.94499999284744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
